@@ -19,12 +19,12 @@ import io.trino.tpch.TpchColumn;
 import io.trino.tpch.TpchTable;
 
 import java.io.File;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.Writer;
 import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 import static com.google.common.base.Preconditions.checkArgument;
@@ -32,6 +32,8 @@ import static io.trino.plugin.base.util.JsonUtils.parseJson;
 import static io.trino.plugin.tpch.util.Optionals.withBoth;
 import static java.lang.String.format;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.nio.file.StandardOpenOption.CREATE;
+import static java.nio.file.StandardOpenOption.WRITE;
 
 public class TableStatisticsDataRepository
 {
@@ -50,7 +52,7 @@ public class TableStatisticsDataRepository
             TableStatisticsData statisticsData)
     {
         String filename = tableStatisticsDataFilename(table, partitionColumn, partitionValue);
-        Path path = Paths.get("trino-tpch", "src", "main", "resources", "tpch", "statistics", schemaName, filename + ".json");
+        Path path = Path.of("trino-tpch", "src", "main", "resources", "tpch", "statistics", schemaName, filename + ".json");
         writeStatistics(path, statisticsData);
     }
 
@@ -62,8 +64,8 @@ public class TableStatisticsDataRepository
             objectMapper
                     .writerWithDefaultPrettyPrinter()
                     .writeValue(file, tableStatisticsData);
-            try (FileWriter fileWriter = new FileWriter(file, UTF_8, true)) {
-                fileWriter.append('\n');
+            try (Writer writer = Files.newBufferedWriter(path, UTF_8, CREATE, WRITE)) {
+                writer.append('\n');
             }
         }
         catch (IOException e) {
