@@ -20,17 +20,16 @@ import org.yaml.snakeyaml.Yaml;
 import java.io.StringReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.base.Verify.verifyNotNull;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static java.util.Objects.requireNonNullElse;
 import static java.util.stream.Collectors.joining;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
@@ -75,7 +74,7 @@ public class TestWorkflows
                 List<?> steps = getList(job, "steps");
                 for (int stepPosition = 0; stepPosition < steps.size(); stepPosition++) {
                     Map<?, ?> step = (Map<?, ?>) steps.get(stepPosition);
-                    String stepName = firstNonNull((String) step.get("name"), "Step #" + stepPosition);
+                    String stepName = requireNonNullElse((String) step.get("name"), "Step #" + stepPosition);
                     if (step.containsKey("uses")) {
                         String uses = getString(step, "uses");
                         if (!isSafeActionReference(uses)) {
@@ -128,7 +127,7 @@ public class TestWorkflows
             List<?> steps = getList(runs, "steps");
             for (int stepPosition = 0; stepPosition < steps.size(); stepPosition++) {
                 Map<?, ?> step = (Map<?, ?>) steps.get(stepPosition);
-                String stepName = firstNonNull((String) step.get("name"), "Step #" + stepPosition);
+                String stepName = requireNonNullElse((String) step.get("name"), "Step #" + stepPosition);
                 if (step.containsKey("uses")) {
                     String uses = getString(step, "uses");
                     if (!isSafeActionReference(uses)) {
@@ -168,7 +167,7 @@ public class TestWorkflows
 
     private static Path findRepositoryRoot()
     {
-        Path workingDirectory = Paths.get("").toAbsolutePath();
+        Path workingDirectory = Path.of("").toAbsolutePath();
         log.info("Current working directory: %s", workingDirectory);
         for (Path path = workingDirectory; path != null; path = path.getParent()) {
             if (Files.isDirectory(path.resolve(".git"))) {
